--- a/Weather.Common/Weather.Common.csproj
+++ b/Weather.Common/Weather.Common.csproj
@@ -4,15 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E22B70F0-E1E7-4C28-88B5-62F2DEAC42F2}</ProjectGuid>
+    <ProjectGuid>{3810F9AA-CB3C-4F8C-8CD4-5BD07910F935}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Weather.SenseHat</RootNamespace>
-    <AssemblyName>Weather.SenseHat</AssemblyName>
+    <RootNamespace>Weather.Common</RootNamespace>
+    <AssemblyName>Weather.Common</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.17134.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -120,34 +120,14 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="DemoRunner.cs" />
-    <Compile Include="Demos\Compass.cs" />
-    <Compile Include="Demos\DiscoLights.cs" />
-    <Compile Include="Demos\GammaTest.cs" />
-    <Compile Include="Demos\GravityBlob.cs" />
-    <Compile Include="Demos\JoystickPixel.cs" />
-    <Compile Include="Demos\MultiColorScrollText.cs" />
-    <Compile Include="Demos\SingleColorScrollText.cs" />
-    <Compile Include="Demos\SpriteAnimation.cs" />
-    <Compile Include="Demos\WriteTemperature.cs" />
-    <Compile Include="Lights.cs" />
+    <Compile Include="ColorHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SenseHatDemo.cs" />
-    <EmbeddedResource Include="Properties\Weather.SenseHat.rd.xml" />
+    <EmbeddedResource Include="Properties\Weather.Common.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Emmellsoft.IoT.RPi.SenseHat">
-      <Version>0.1.0.10</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Weather.Common\Weather.Common.csproj">
-      <Project>{3810f9aa-cb3c-4f8c-8cd4-5bd07910f935}</Project>
-      <Name>Weather.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
