--- a/Weather.SenseHat/Weather.SenseHat.csproj
+++ b/Weather.SenseHat/Weather.SenseHat.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SenseHatDemo.cs" />
     <Compile Include="SenseHatHelper.cs" />
+    <Compile Include="Sensors.cs" />
     <EmbeddedResource Include="Properties\Weather.SenseHat.rd.xml" />
   </ItemGroup>
   <ItemGroup>
